# MyDictionary

./: .gitignore  .gitmodules  ACADEMIC-MODE-FIX.md  ACADEMIC_WRITING_MODELS.md  CHANGELOG.md  CHROME_WEB_STORE.md  CLAUDE.md  DESIGN.md  PRODUCT_SUMMARY.md  README.md  SYNONYM_IMPLEMENTATION.md  Solution.md  UI_WIREFRAME.md  academic-phrasebank-sample-48.json.backup  academic-phrases-example.json  background.js  content.js  manifest.json  package.json  permissions-justification.md  pnpm-lock.yaml  test-fill-mask.js  vite.config.js  立即修复学术模式.md
data/: manchester-phrasebank-full.json  synonyms-db.json
docs/: ACADEMIC_MODE_TESTING.md  ACADEMIC_VERSION_PLAN.md  AI-tts-voice.md  CLAUDE.md  COMPLETION_SUMMARY.md  HYBRID_MODEL_STRATEGY.md  IMPLEMENTATION-GUIDE.md  IMPORT_FEATURE_TESTING.md  JSON格式说明.md  LOGO-CACHE-FIX.md  MODEL_STRATEGY.md  PHASE1_PROGRESS.md  PRIVACY_POLICY.md  QUICK-FIX-LOGO.md  TESTING.md  TTS-auto-discovery-architecture.md  TTS-dual-mode-guide.md  TTS-implementation-comparison.md  TTS-implementation-summary.md  TTS-offscreen-document-fix.md  TTS-simplification-summary.md  TTS-technical-analysis.md  TTS-testing-checklist.md  TTS-testing-guide.md  TTS-user-guide.md  academic-data-import-design.md  academic-indexeddb-migration-summary.md  academic-indexeddb-testing.md  decentralized-login-network.md  dictionary-improvement-plan.md  hybrid-search-design.md  local-dictionary-design.md  local-dictionary-implementation-summary.md  payment-version-plan.md  (+4 more)
model-runner/: Cargo.toml  README.md
model-runner/src/: main.rs
model-runner/src/downloader/: mod.rs
(+44 files in other folders)
